[gd_scene load_steps=3 format=4 uid="uid://dvx0agv2rta6e"]

[ext_resource type="Script" uid="uid://do50iebvrxscx" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Container/LevelEditorPropertiesContainer.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b261mqo4crf07" path="res://Asset/Icon/IconReload.svg" id="2"]

[node name="LevelEditorPropertiesContainer" type="VBoxContainer"]
light_mask = 0
offset_right = 78.0
offset_bottom = 28.0
script = ExtResource("1")

[node name="InnerContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
light_mask = 0
layout_mode = 2

[node name="KeyLabel" type="Label" parent="InnerContainer"]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "11111"
autowrap_mode = 1
clip_text = true

[node name="RefreshButton" type="Button" parent="InnerContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2")

[node name="OuterContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
